[gd_scene load_steps=11 format=3 uid="uid://dpx080csyd7fn"]

[ext_resource type="Script" path="res://scripts/condition_editor.gd" id="1_hmgry"]
[ext_resource type="StyleBox" uid="uid://c4higkyqc0n2f" path="res://styles/red_button.tres" id="2_8kllx"]
[ext_resource type="StyleBox" uid="uid://cpq2tagx7jlgd" path="res://styles/red_button_hover.tres" id="3_fk5r5"]
[ext_resource type="Texture2D" uid="uid://bywqnirn63k7k" path="res://sprites/numeric_condition.svg" id="3_osqq7"]
[ext_resource type="Texture2D" uid="uid://dy140fru1kout" path="res://sprites/directional_condition.svg" id="4_0w36f"]
[ext_resource type="StyleBox" uid="uid://v4drwcklu7l7" path="res://styles/red_button_pressed.tres" id="4_4a1ue"]
[ext_resource type="Texture2D" uid="uid://bp436i44nmr4q" path="res://sprites/trash.svg" id="5_goi0x"]
[ext_resource type="PackedScene" uid="uid://bsw5kqyp62apg" path="res://scenes/number_condition_input.tscn" id="5_qkj2s"]
[ext_resource type="PackedScene" uid="uid://b5q0xuxj56twn" path="res://scenes/directional_condition_input.tscn" id="6_h16mn"]
[ext_resource type="PackedScene" uid="uid://b5afhyldsq2xg" path="res://scenes/pattern_input.tscn" id="6_m5yiq"]

[node name="ConditionEditor" type="PanelContainer"]
script = ExtResource("1_hmgry")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 2

[node name="OuterContainer" type="HBoxContainer" parent="Margins"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="Margins/OuterContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_8kllx")
theme_override_styles/hover = ExtResource("3_fk5r5")
theme_override_styles/pressed = ExtResource("4_4a1ue")
theme_override_styles/disabled = ExtResource("4_4a1ue")
theme_override_styles/focus = ExtResource("3_fk5r5")
icon = ExtResource("5_goi0x")
icon_alignment = 1
expand_icon = true

[node name="TypeSelector" type="VBoxContainer" parent="Margins/OuterContainer"]
layout_mode = 2
alignment = 1

[node name="NumericButton" type="Button" parent="Margins/OuterContainer/TypeSelector"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("3_osqq7")
icon_alignment = 1
expand_icon = true

[node name="DirectionalButton" type="Button" parent="Margins/OuterContainer/TypeSelector"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_0w36f")
icon_alignment = 1
expand_icon = true

[node name="InnerPanel" type="PanelContainer" parent="Margins/OuterContainer"]
layout_mode = 2

[node name="InnerMargins" type="MarginContainer" parent="Margins/OuterContainer/InnerPanel"]
layout_mode = 2

[node name="InnerContainer" type="HBoxContainer" parent="Margins/OuterContainer/InnerPanel/InnerMargins"]
layout_mode = 2

[node name="NumberInput" parent="Margins/OuterContainer/InnerPanel/InnerMargins/InnerContainer" node_paths=PackedStringArray("editor") instance=ExtResource("5_qkj2s")]
layout_mode = 2
editor = NodePath("../../../../../..")

[node name="DirectionalInput" parent="Margins/OuterContainer/InnerPanel/InnerMargins/InnerContainer" node_paths=PackedStringArray("editor") instance=ExtResource("6_h16mn")]
visible = false
custom_minimum_size = Vector2(92, 92)
layout_mode = 2
size_flags_horizontal = 3
editor = NodePath("../../../../../..")

[node name="NeighborsLabel" type="Label" parent="Margins/OuterContainer/InnerPanel/InnerMargins/InnerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "="

[node name="PatternInput" parent="Margins/OuterContainer/InnerPanel/InnerMargins/InnerContainer" instance=ExtResource("6_m5yiq")]
layout_mode = 2
default_text = "Anything"
can_invert = true

[connection signal="pressed" from="Margins/OuterContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Margins/OuterContainer/TypeSelector/NumericButton" to="." method="_on_numeric_button_pressed"]
[connection signal="pressed" from="Margins/OuterContainer/TypeSelector/DirectionalButton" to="." method="_on_directional_button_pressed"]
